--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=todo-app
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
+spring.datasource.url=jdbc:h2:file:./todo-db
+spring.jpa.hibernate.ddl-auto=create-drop
