--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
   h2.console:
     enabled: true
     path: '/console'
+  main:
+    banner-mode: off
   datasource:
     url: 'jdbc:h2:file:./todo-db'
   jpa:
