--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,4 +11,4 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
-task.allowMultipleTasksFromTemplate: false
+task.template.allowMultipleTasks: false
