--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -8,5 +8,5 @@ spring:
     url: 'jdbc:h2:file:./todo-db'
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
 task.template.allowMultipleTasks: false
