--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.profiles.active=local
 spring.application.name=todo-app
 spring.main.banner-mode=off
 task.template.allowMultipleTasks=false
+management.endpoints.web.base-path=/status
