--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -10,3 +10,8 @@ spring:
     hibernate:
       ddl-auto: validate
 task.template.allowMultipleTasks: false
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
